--- a/src/main/resources/templates/categories/index.html
+++ b/src/main/resources/templates/categories/index.html
@@ -25,10 +25,10 @@
 				    <td th:text="${category.name}"></td>
 				    <td th:text="${category.description}"></td>
 				    <td>
-				    	<button type="button" class="btn btn-warning">
+				    	<button type="button" class="btn btn-warning" th:value="${category.id}" onclick="editForm(this.value)">
 				    		<i class="bi bi-pencil-square"></i>
 				    	</button>
-				    	<button type="button" class="btn btn-danger">
+				    	<button type="button" class="btn btn-danger" th:value="${category.id}" onclick="deleteForm(this.value)">
 				    		<i class="bi bi-trash-fill"></i>
 			    		</button>
 				    </td>
@@ -48,10 +48,10 @@
 		      <div class="modal-body">
 		        ...
 		      </div>
-		      <div class="modal-footer">
+		      <!--<div class="modal-footer">
 		        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 		        <button type="button" class="btn btn-primary">Save changes</button>
-		      </div>
+		      </div>-->
 		    </div>
 		  </div>
 		</div>
@@ -66,6 +66,44 @@
 						$('#myModal').modal('show');
 			            $('.modal-title').html("Category Form");
 			            $('.modal-body').html(categoryForm);
+					}
+				});
+			}
+			
+			function editForm(id) {
+				$.ajax({
+					url:`/categories/edit/${id}`,
+					type:'get',
+					contentType:'html',
+					success:function(categoryForm) {
+						$('#myModal').modal('show');
+			            $('.modal-title').html("Edit Category");
+			            $('.modal-body').html(categoryForm);
+					}
+				});
+			}
+			
+			
+			function deleteForm(id) {
+				$.ajax({
+					url:`/categories/delete/${id}`,
+					type:'get',
+					contentType:'html',
+					success:function(categoryForm) {
+						$('#myModal').modal('show');
+			            $('.modal-title').html("Delete Category");
+			            $('.modal-body').html(categoryForm);
+					}
+				});
+			}
+			
+			function deleteCategory(id) {
+				$.ajax({
+					url:`/categories/deleteCategory/${id}`,
+					type:'get',
+					contentType:'html',
+					success:function(categoryForm) {
+			            window.location.reload();
 					}
 				});
 			}
